<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0"
        android:background="@layout/grad_back"
         >

    <TextView
        android:id="@+id/instructions_title"
        style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions"
        android:layout_alignParentTop="true"
         />
    
<ScrollView 
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_title"
        android:layout_marginBottom="80dp" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    
     >
    
    	
    
		<TextView
            android:id="@+id/instructions_header1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instruction_patient"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
             />

		<ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_weight="1" />
		
        <TextView
            android:id="@+id/instructions_header2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:text="@string/instruction_fysio"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
             />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:layout_weight="1" />
        

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_weight="1" />
    
    
</LinearLayout>
</ScrollView>

	<include
	    android:id="@+id/id"
	    layout="@layout/menu"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true" />
	
</RelativeLayout>